--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      - assets/
+      - assets/flutter_logo.png
+      - assets/quiz_bg.jpg
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
